#120: added clear button, fixed wraping pallette buttons

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -231,7 +231,7 @@ a {
   background-color: #add8e6bf;
   transition: all 1s;
   opacity: 1;
-  min-width: 800px;
+  min-width: 940px;
 }
 
 .paperSheet {
